// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider      = "prisma-client"
  output        = "../lib/generated/prisma"
  binaryTargets = ["native", "rhel-openssl-3.0.x"]
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
}

// ==================== ENUM ====================
enum Role {
  ELEVE
  ADMINISTRATEUR
  AGENT_CENTRE_EXAMEN
}

enum StatutNotification {
  ENVOYEE
  RECUE
  LUE
}

enum StatutRendezVous {
  PLANIFIE
  CONFIRME
  ANNULE
  HONORE
}

enum StatutDisponibilite {
  LIBRE
  RESERVE
  ANNULE
}

enum StatutDocument {
  PAS_DISPONIBLE
  DISPONIBLE
  RETIRE
}

enum StatutPaiement {
  EN_ATTENTE
  EFFECTUE
  ANNULE
}

enum StatutValidationDuplicata {
  SOUMISE
  EN_ANALYSE
  VALIDEE
  REJETEE
}

enum TypePieceDuplicata {
  DECLARATION_PERTE
  CNI
  DEMANDE_ADRESSEE_DG_OBC
  DECHARGE_BORDEREAU_REUSSITE
}

enum StatutPieceDuplicata {
  EN_ATTENTE
  VALIDEE
  REJETEE
}

enum TypeDocument {
  ORIGINAL
  RELEVE_NOTES
  DUPLICATA
}

enum DiplomePrincipal {
  BEPC
  PROBATOIRE
  BACCALAUREAT
}

enum modePaiement {
  ORANGEMONEY
  MTNMONEY
  CARTEBANCAIRE
}

// ==================== ORGANISMES ====================
model Organisme {
  id  String @id @default(uuid())
  nom String @unique

  users               User[]
  antennesRegionale   AntenneRegionale[]
  documentsAcademique DocumentAcademique[]
  duplicatas          Duplicata[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("organismes")
}

// ==================== ANTENNES REGIONALES ====================
model AntenneRegionale {
  id        String  @id @default(uuid())
  nom       String
  region    String
  ville     String?
  accessKey String?

  organismeId String
  organisme   Organisme @relation(fields: [organismeId], references: [id])

  users               User[]
  documentsAcademique DocumentAcademique[]
  duplicatas          Duplicata[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([organismeId, region])
  @@index([organismeId])
  @@map("antennes_regionales")
}

// ==================== CENTRES D'EXAMEN ====================
model CentreExamen {
  id     String  @id @default(uuid())
  nom    String
  region String  @unique
  ville  String?

  users User[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("centres_examen")
}

// ==================== USER ====================
model User {
  id                String    @id @default(uuid())
  authUserId        String?   @unique
  role              Role      @default(ELEVE)
  email             String    @unique
  matricule         String    @unique
  nom               String
  prenom            String
  dateCreation      DateTime  @default(now())
  derniereConnexion DateTime?

  // Champs spécifiques à l'élève (nulables si l'user est admin)
  dateNaissance DateTime?

  // Champs spécifiques à l'admin (nulables si l'user est élève)
  nomService         String?
  maxRdvParJour      Int?              @default(10)
  organismeId        String?
  organisme          Organisme?        @relation(fields: [organismeId], references: [id])
  antenneRegionaleId String?
  antenneRegionale   AntenneRegionale? @relation(fields: [antenneRegionaleId], references: [id])
  centreExamenId     String?
  centreExamen       CentreExamen?     @relation(fields: [centreExamenId], references: [id])

  // Relations
  rendezVousCrees         RendezVous[]         @relation("AdminRendezVous")
  eleveRendezVous         RendezVous[]         @relation("EleveRendezVous")
  retraitsConfirmes       RendezVous[]         @relation("AgentCentreRetraits")
  disponibilitesRdv       DisponibiliteRdv[]
  documentsAcademique     DocumentAcademique[] @relation("EleveDocuments") // <-- renommé
  examensValides          ExamenValide[]
  notifications           Notification[]
  mailLogs                MailLog[]
  duplicatas              Duplicata[]          @relation("EleveDuplicatas")
  duplicatasAnalyses      Duplicata[]          @relation("AdminDuplicataAnalyses")
  piecesDuplicataValidees PieceDuplicata[]     @relation("AdminPiecesDuplicata")
  recu                    Recu[]
  auditLogs               AuditLog[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([centreExamenId])
  @@map("users")
}

// ==================== RENDEZ_VOUS ====================
model RendezVous {
  id          String           @id @default(uuid())
  dateRdv     DateTime
  heureRdv    String
  lieu        String
  statut      StatutRendezVous @default(PLANIFIE)
  commentaire String           @default("")

  adminId String
  admin   User   @relation("AdminRendezVous", fields: [adminId], references: [id])

  eleveId String
  eleve   User   @relation("EleveRendezVous", fields: [eleveId], references: [id])

  disponibiliteId String?           @unique
  disponibilite   DisponibiliteRdv? @relation(fields: [disponibiliteId], references: [id])

  documentId String?
  document   DocumentAcademique? @relation(fields: [documentId], references: [id], onDelete: Cascade)

  retraitConfirmeAt    DateTime?
  retraitConfirmeParId String?
  retraitConfirmePar   User?     @relation("AgentCentreRetraits", fields: [retraitConfirmeParId], references: [id], onDelete: SetNull)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([dateRdv, heureRdv, statut])
  @@index([documentId, statut])
  @@index([eleveId, statut])
  @@index([retraitConfirmeParId])
  @@map("rendez_vous")
}

// ==================== DISPONIBILITE RDV ====================
model DisponibiliteRdv {
  id       String              @id @default(uuid())
  dateRdv  DateTime
  heureRdv String
  lieu     String
  statut   StatutDisponibilite @default(LIBRE)

  adminId String
  admin   User   @relation(fields: [adminId], references: [id])

  rendezVous RendezVous?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("disponibilites_rdv")
}

// ==================== NOTIFICATION ====================
model Notification {
  id               String             @id @default(uuid())
  typeNotification String
  title            String?
  statut           StatutNotification @default(ENVOYEE)
  message          String
  actionUrl        String?
  metadata         Json?
  deletedAt        DateTime?
  dateEnvoi        DateTime           @default(now())

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([userId, deletedAt, dateEnvoi])
  @@index([userId, statut])
  @@index([typeNotification])
  @@map("notifications")
}

// ==================== MAIL LOG ====================
model MailLog {
  id      String  @id @default(uuid())
  to      String
  subject String
  status  String  @default("ENVOYE")
  error   String?

  userId String?
  user   User?   @relation(fields: [userId], references: [id], onDelete: SetNull)

  createdAt DateTime @default(now())

  @@index([userId])
  @@map("mail_logs")
}

// ==================== DOCUMENTACADEMIQUE ====================
model DocumentAcademique {
  id                String           @id @default(uuid())
  typeDocument      TypeDocument
  diplomeType       DiplomePrincipal @default(BACCALAUREAT)
  statut            StatutDocument   @default(PAS_DISPONIBLE)
  demandeSoumiseAt  DateTime?
  centreExamen      String?
  regionComposition String?

  // Élève qui demande
  eleveId String
  eleve   User   @relation("EleveDocuments", fields: [eleveId], references: [id])

  // Organisme et antenne responsables de la demande
  organismeId        String?
  organisme          Organisme?        @relation(fields: [organismeId], references: [id])
  antenneRegionaleId String?
  antenneRegionale   AntenneRegionale? @relation(fields: [antenneRegionaleId], references: [id])

  // Relations optionnelles vers Paiement, Relevé, Diplôme
  paiementId String?
  paiement   Paiement?
  releveId   String?
  releve     Releve?

  diplomeId String?
  diplome   Diplome?

  rendezVous RendezVous[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([eleveId, diplomeType, typeDocument])
  @@index([statut])
  @@index([diplomeType, typeDocument])
  @@index([organismeId])
  @@index([antenneRegionaleId])
  @@map("documents")
}

// ==================== DUPLICATA ====================
model Duplicata {
  id                String                    @id @default(uuid())
  typeDocument      TypeDocument
  nomDuplicata      String
  statut            StatutDocument            @default(PAS_DISPONIBLE)
  statutValidation  StatutValidationDuplicata @default(SOUMISE)
  motifRejet        String?
  analysedAt        DateTime?
  analysedById      String?
  analysedBy        User?                     @relation("AdminDuplicataAnalyses", fields: [analysedById], references: [id], onDelete: SetNull)
  intruction        String
  regionComposition String?

  // Élève qui demande
  eleveId String
  eleve   User   @relation("EleveDuplicatas", fields: [eleveId], references: [id])

  // Organisme et antenne responsables de la demande
  organismeId        String?
  organisme          Organisme?        @relation(fields: [organismeId], references: [id])
  antenneRegionaleId String?
  antenneRegionale   AntenneRegionale? @relation(fields: [antenneRegionaleId], references: [id])

  // Relations inverses (one-to-one, la FK est dans les modèles correspondants)
  paiement Paiement?
  releve   Releve?          @relation("DuplicataReleve")
  diplome  Diplome?
  pieces   PieceDuplicata[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@index([organismeId])
  @@index([antenneRegionaleId])
  @@index([statutValidation])
  @@index([analysedById])
  @@map("duplicatas")
}

model PieceDuplicata {
  id            String               @id @default(uuid())
  typePiece     TypePieceDuplicata
  statut        StatutPieceDuplicata @default(EN_ATTENTE)
  bucket        String
  path          String
  fileName      String
  mimeType      String
  size          Int
  commentaire   String?
  validatedAt   DateTime?
  validatedById String?
  validatedBy   User?                @relation("AdminPiecesDuplicata", fields: [validatedById], references: [id], onDelete: SetNull)

  duplicataId String
  duplicata   Duplicata @relation(fields: [duplicataId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([duplicataId, typePiece])
  @@index([duplicataId])
  @@index([typePiece])
  @@index([statut])
  @@index([validatedById])
  @@map("pieces_duplicata")
}

// ==================== PAIEMENT ====================
model Paiement {
  id          String         @id @default(uuid())
  statut      StatutPaiement @default(EN_ATTENTE)
  modePaiment String

  // Lien vers Duplicata (one-to-one)
  duplicataId String    @unique
  duplicata   Duplicata @relation(fields: [duplicataId], references: [id], onDelete: Cascade)
  recu        Recu[]

  // Lien optionnel vers DocumentAcademique
  documentAcademique   DocumentAcademique? @relation(fields: [documentAcademiqueId], references: [id], onDelete: Cascade)
  documentAcademiqueId String?             @unique

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("paiements")
}

// ==================== RELEVE ====================
model Releve {
  id          String         @id @default(uuid())
  nomReleve   String
  statut      StatutDocument @default(PAS_DISPONIBLE)
  instruction String

  // Lien vers Duplicata (one-to-one)
  duplicataId String    @unique
  duplicata   Duplicata @relation("DuplicataReleve", fields: [duplicataId], references: [id])

  // Lien optionnel vers DocumentAcademique
  documentAcademique   DocumentAcademique? @relation(fields: [documentAcademiqueId], references: [id], onDelete: Cascade)
  documentAcademiqueId String?             @unique

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("releves")
}

// ==================== DIPLOME ====================
model Diplome {
  id          String         @id @default(uuid())
  nomDiplome  String
  statut      StatutDocument @default(PAS_DISPONIBLE)
  instruction String

  // Lien vers Duplicata (one-to-one)
  duplicataId String    @unique
  duplicata   Duplicata @relation(fields: [duplicataId], references: [id], onDelete: Cascade)

  // Lien optionnel vers DocumentAcademique
  documentAcademique   DocumentAcademique? @relation(fields: [documentAcademiqueId], references: [id], onDelete: Cascade)
  documentAcademiqueId String?             @unique

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("diplomes")
}

// ==================== EXAMEN VALIDE ====================
model ExamenValide {
  id                String           @id @default(uuid())
  diplomeType       DiplomePrincipal
  anneeSession      Int?
  centreExamen      String?
  regionComposition String?

  eleveId String
  eleve   User   @relation(fields: [eleveId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([eleveId, diplomeType])
  @@index([diplomeType])
  @@map("examens_valides")
}

// ==================== PARAMETRES RENDEZ-VOUS ====================
model ParametreRendezVous {
  id                   String  @id @default("GLOBAL")
  quotaJournalier      Int     @default(200)
  lieuObc              String  @default("Centre de retrait")
  allowWeekendBookings Boolean @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("parametres_rendez_vous")
}

// ==================== CRENEAUX HORAIRES ====================
model CreneauHoraire {
  id         String  @id @default(uuid())
  heureDebut String
  heureFin   String
  actif      Boolean @default(true)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([heureDebut, heureFin])
  @@map("creneaux_horaires")
}

// ==================== JOURS FERIES ====================
model JourFerie {
  id     String   @id @default(uuid())
  date   DateTime
  nom    String
  annuel Boolean  @default(false)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([date])
  @@map("jours_feries")
}

// ==================== RECU ====================
model Recu {
  id           String   @id @default(uuid())
  numero       String   @unique
  montant      Float
  dateEmission DateTime @default(now())
  modePaiement String?
  commentaire  String?

  // Relation optionnelle vers un étudiant (User)
  userId String?
  user   User?   @relation(fields: [userId], references: [id])

  // Relation optionnelle vers un paiement enregistré
  paiementId String?
  paiement   Paiement? @relation(fields: [paiementId], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("recus")
}

// ==================== AUDIT LOG ====================
model AuditLog {
  id         String  @id @default(uuid())
  action     String // ex: "LOGIN", "CHANGE_ROLE", "CHANGE_STATUS", "WITHDRAWAL", "PAYMENT"
  resource   String // ex: "USER", "DOCUMENT", "PAYMENT", "APPOINTMENT"
  resourceId String // ID de la ressource affectée
  details    String? // Détails JSON des changements
  ipAddress  String?

  userId String?
  user   User?   @relation(fields: [userId], references: [id], onDelete: SetNull)

  createdAt DateTime @default(now())

  @@index([userId])
  @@index([action])
  @@index([createdAt])
  @@map("audit_logs")
}
