%% Diagramme de classes UML — coeur metier DR-DOCSCOL (draw.io / Mermaid)
%% Import draw.io : Arrange > Insert > Advanced > Mermaid
%%
%% SYNTAXE :
%%   - Lignes AVANT ".."  = ATTRIBUTS (+ public, - prive)
%%   - Lignes APRES ".."  = METHODES
%%   - <|-- heritage | *-- composition | o-- aggregation | --> association

classDiagram
    direction TB

    class Utilisateur {
        <<abstract>>
        -id: String
        -authUserId: String
        +email: String
        +matricule: String
        +nom: String
        +prenom: String
        +role: Role
        -dateCreation: DateTime
        +derniereConnexion: DateTime
        ..
        +seConnecter(email, motDePasse): Session
        +getRole(): Role
        #mettreAJourDerniereConnexion(): void
    }

    class Eleve {
        +dateNaissance: DateTime
        ..
        +activerCompte(): void
        +consulterDocuments(): DocumentAcademique[]
        +demanderReleve(diplome): void
        +demanderDuplicata(dossier): void
        +prendreRendezVous(doc, date, heure): RendezVous
    }

    class Administrateur {
        +nomService: String
        +maxRdvParJour: Int
        -organismeId: String
        -antenneRegionaleId: String
        ..
        +importerEleves(csv): void
        +disponibiliserDocument(doc): void
        +changerStatut(doc, statut): void
        +analyserDuplicata(dup): void
    }

    class AgentCentreExamen {
        -centreExamenId: String
        ..
        +listerRendezVous(): RendezVous[]
        +confirmerRetrait(rdv): void
    }

    Utilisateur <|-- Eleve
    Utilisateur <|-- Administrateur
    Utilisateur <|-- AgentCentreExamen

    class Organisme {
        -id: String
        +nom: String
        ..
        +getAntennes(): AntenneRegionale[]
    }

    class AntenneRegionale {
        -id: String
        +nom: String
        +region: String
        +ville: String
        -organismeId: String
    }

    class CentreExamen {
        -id: String
        +nom: String
        +region: String
        +ville: String
    }

    Organisme "1" *-- "0..*" AntenneRegionale : possede
    Organisme "1" o-- "0..*" Administrateur : emploie
    AntenneRegionale "1" o-- "0..*" Administrateur : affecte
    CentreExamen "1" o-- "0..*" AgentCentreExamen : affecte

    class ExamenValide {
        -id: String
        +diplomeType: DiplomePrincipal
        +anneeSession: Int
        +regionComposition: String
        -eleveId: String
        ..
        +estCompose(diplome): boolean
    }

    class DocumentAcademique {
        -id: String
        +typeDocument: TypeDocument
        +diplomeType: DiplomePrincipal
        +statut: StatutDocument
        +demandeSoumiseAt: DateTime
        -eleveId: String
        ..
        +appliquerTransition(statut): void
        -resoudreRoute(): RouteDocument
        +necessiteRendezVous(): boolean
    }

    class Duplicata {
        -id: String
        +nomDuplicata: String
        +statut: StatutDocument
        +statutValidation: StatutValidationDuplicata
        -eleveId: String
        ..
        +soumettrePieces(fichiers): void
        +calculerFrais(): Float
    }

    class PieceDuplicata {
        -id: String
        +typePiece: TypePieceDuplicata
        +statut: StatutPieceDuplicata
        +fileName: String
        -duplicataId: String
        ..
        +televerser(fichier): void
        +valider(admin): void
    }

    Eleve "1" *-- "0..*" ExamenValide : a reussi
    Eleve "1" --> "0..*" DocumentAcademique : demande
    Eleve "1" --> "0..*" Duplicata : demande
    Organisme "1" o-- "0..*" DocumentAcademique : supervise
    AntenneRegionale "1" o-- "0..*" DocumentAcademique : gere retrait
    Organisme "1" o-- "0..*" Duplicata : supervise
    Duplicata "1" *-- "0..*" PieceDuplicata : comporte
    Administrateur "1" --> "0..*" Duplicata : analyse
    Administrateur "1" --> "0..*" PieceDuplicata : valide

    class Paiement {
        -id: String
        +statut: StatutPaiement
        +modePaiement: modePaiement
        -duplicataId: String
        ..
        +effectuerPaiement(): Recu
    }

    class Recu {
        -id: String
        +numero: String
        +montant: Float
        +dateEmission: DateTime
        ..
        +genererPDF(): Blob
    }

    Duplicata "1" *-- "1" Paiement : exige
    Paiement "1" *-- "0..*" Recu : genere
    Eleve "1" o-- "0..*" Recu : possede

    class RendezVous {
        -id: String
        +dateRdv: DateTime
        +heureRdv: String
        +lieu: String
        +statut: StatutRendezVous
        +retraitConfirmeAt: DateTime
        ..
        +planifier(): void
        +annuler(): void
        +confirmerRetrait(agent): void
    }

    DocumentAcademique "1" *-- "0..*" RendezVous : fait l objet de
    Eleve "1" --> "0..*" RendezVous : prend
    Administrateur "1" --> "0..*" RendezVous : planifie
    AgentCentreExamen "1" --> "0..*" RendezVous : confirme retrait

    class Notification {
        -id: String
        +typeNotification: String
        +title: String
        +statut: StatutNotification
        +message: String
        ..
        +marquerCommeLue(): void
        +envoyerEmail(): void
    }

    Eleve "1" *-- "0..*" Notification : recoit
